--- a/Dota2Predictor.ipynb
+++ b/Dota2Predictor.ipynb
@@ -7,20 +7,21 @@
     "<center><img src=\"dota_banner_small.jpeg\"/></center>\n",
     "\n",
     "## Abstract\n",
-    "We forecast weekly maximum player counts for the Multiplayer Online Battle Arena (MOBA) game Dota 2 via an ARIMA model. The data can be found here: https://steamdb.info/app/570/charts/#max. In Sections 1–3, we examine the data, clean it, and examine it for stationarity. The data is deemed non-stationary, so we process it in Section 4 by computing annualized normalizations and considering first differences of these values. In Section 5, we use auto_arima to deduce an ARIMA model order of (1,1,3), and we make summary remarks in Section 6.\n",
+    "We forecast weekly maximum player counts for the Multiplayer Online Battle Arena (MOBA) game Dota 2 via an ARIMA model. The data can be found here: https://steamdb.info/app/570/charts/#max. In Sections 1–3, we examine the data, clean it, and examine it for stationarity. The data is deemed non-stationary, so we process it in Section 4 by computing annualized normalizations and considering first differences of these values. In Section 5, we use auto_arima to deduce an ARIMA model order of (1,1,3), while Section 6 contains the forecasts. We make summary remarks in Section 7.\n",
     "\n",
     "## Table of Contents\n",
     "1. [Preliminary Remarks](#preliminary_remarks) \n",
     "2. [Data Cleaning](#data_cleaning)\n",
     "3. [Assessing Stationarity](#assessing_stationarity)\n",
-    "4. [Transforming the Model](#transforming_data)\n",
+    "4. [Transforming the Data](#transforming_data)\n",
     "5. [Establishing a Model](#establishing_model)  \n",
-    "6. [Conclusion](#conclusion)"
+    "6. [Forecasting](#forecasting)  \n",
+    "7. [Conclusions](#conclusions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +134,7 @@
        "4  2011-09-26 00:00:00    222.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -201,7 +202,7 @@
        "6204  2024-06-20 18:30:00  576582.0"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -278,7 +279,7 @@
        "max    1.291328e+06"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +302,7 @@
        "<Axes: title={'center': 'Dota 2 Player Count'}>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +361,7 @@
        "pandas.core.frame.DataFrame"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +438,7 @@
        "2024-06-20                   682.304"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +476,7 @@
        "<Axes: title={'center': 'Dota 2 Player Count (in thousands)'}, xlabel='DateTime'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,7 +553,7 @@
        "max                 1291.328000"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -584,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +601,7 @@
        " 46473.83947619086)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transforming Data <a class=\"anchor\" id=\"transforming_data\"></a>\n",
+    "### Transforming the Data <a class=\"anchor\" id=\"transforming_data\"></a>\n",
     "\n",
     "Let us transform the data in hopes of securing more stationary observations. We will compute weekly averages and plot this against the daily player counts. Further, we normalize this data relative to the year in which it occurs. We will refer to these as _annualized Z-scores_. That is, for a given weekly average we compute \n",
     "\n",
@@ -667,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,26 +680,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e66d044b10>"
+       "<matplotlib.legend.Legend at 0x16b85318d10>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e66c7d4dd0>"
+       "<matplotlib.legend.Legend at 0x16b85387e90>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +756,7 @@
        "<Axes: title={'center': 'Annualized Z-scores'}, xlabel='DateTime'>"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -779,7 +780,7 @@
        " 823.267068479379)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +825,7 @@
        "<Axes: title={'center': 'Annualized Z-scores, First Difference'}, xlabel='DateTime'>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -848,7 +849,7 @@
        " 863.4889693853422)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -893,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -916,23 +917,23 @@
       " ARIMA(0,1,4)(0,0,0)[1] intercept   : AIC=873.676, Time=0.13 sec\n",
       " ARIMA(0,1,5)(0,0,0)[1] intercept   : AIC=869.833, Time=0.17 sec\n",
       " ARIMA(1,1,0)(0,0,0)[1] intercept   : AIC=903.919, Time=0.04 sec\n",
-      " ARIMA(1,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.38 sec\n",
-      " ARIMA(1,1,2)(0,0,0)[1] intercept   : AIC=inf, Time=0.55 sec\n",
-      " ARIMA(1,1,3)(0,0,0)[1] intercept   : AIC=842.947, Time=0.51 sec\n",
-      " ARIMA(1,1,4)(0,0,0)[1] intercept   : AIC=inf, Time=0.61 sec\n",
+      " ARIMA(1,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.36 sec\n",
+      " ARIMA(1,1,2)(0,0,0)[1] intercept   : AIC=inf, Time=0.46 sec\n",
+      " ARIMA(1,1,3)(0,0,0)[1] intercept   : AIC=842.947, Time=0.49 sec\n",
+      " ARIMA(1,1,4)(0,0,0)[1] intercept   : AIC=inf, Time=0.60 sec\n",
       " ARIMA(2,1,0)(0,0,0)[1] intercept   : AIC=885.208, Time=0.07 sec\n",
-      " ARIMA(2,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.62 sec\n",
-      " ARIMA(2,1,2)(0,0,0)[1] intercept   : AIC=845.994, Time=0.46 sec\n",
-      " ARIMA(2,1,3)(0,0,0)[1] intercept   : AIC=inf, Time=0.66 sec\n",
-      " ARIMA(3,1,0)(0,0,0)[1] intercept   : AIC=886.030, Time=0.10 sec\n",
-      " ARIMA(3,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.61 sec\n",
-      " ARIMA(3,1,2)(0,0,0)[1] intercept   : AIC=inf, Time=0.57 sec\n",
-      " ARIMA(4,1,0)(0,0,0)[1] intercept   : AIC=884.620, Time=0.11 sec\n",
-      " ARIMA(4,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.78 sec\n",
-      " ARIMA(5,1,0)(0,0,0)[1] intercept   : AIC=879.936, Time=0.14 sec\n",
+      " ARIMA(2,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.64 sec\n",
+      " ARIMA(2,1,2)(0,0,0)[1] intercept   : AIC=845.994, Time=0.44 sec\n",
+      " ARIMA(2,1,3)(0,0,0)[1] intercept   : AIC=inf, Time=0.58 sec\n",
+      " ARIMA(3,1,0)(0,0,0)[1] intercept   : AIC=886.030, Time=0.11 sec\n",
+      " ARIMA(3,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.76 sec\n",
+      " ARIMA(3,1,2)(0,0,0)[1] intercept   : AIC=inf, Time=0.56 sec\n",
+      " ARIMA(4,1,0)(0,0,0)[1] intercept   : AIC=884.620, Time=0.12 sec\n",
+      " ARIMA(4,1,1)(0,0,0)[1] intercept   : AIC=inf, Time=0.79 sec\n",
+      " ARIMA(5,1,0)(0,0,0)[1] intercept   : AIC=879.936, Time=0.13 sec\n",
       "\n",
       "Best model:  ARIMA(1,1,3)(0,0,0)[1] intercept\n",
-      "Total fit time: 6.800 seconds\n"
+      "Total fit time: 6.714 seconds\n"
      ]
     }
    ],
@@ -945,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +958,7 @@
       "Dep. Variable:                      y   No. Observations:                  639\n",
       "Model:               SARIMAX(1, 1, 3)   Log Likelihood                -415.474\n",
       "Date:                Fri, 21 Jun 2024   AIC                            842.947\n",
-      "Time:                        20:06:33   BIC                            869.697\n",
+      "Time:                        20:25:17   BIC                            869.697\n",
       "Sample:                    09-25-2011   HQIC                           853.332\n",
       "                         - 12-31-2023                                         \n",
       "Covariance Type:                  opg                                         \n",
@@ -990,7 +991,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forecasting <a class=\"anchor\" id=\"establishing_model\"></a>\n",
+    "### Forecasting <a class=\"anchor\" id=\"forecasting\"></a>\n",
     "\n",
     "Let us apply the model to predict maximum weekly player counts in 2024. We will see that the model performs poorly on a long time-horizon (> 4 months), but performs within a reasonable margin of error for shorter periods (<= 3 months). \n",
     "\n",
@@ -999,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1061,7 @@
        "2024-01-29/2024-02-04         656.950077"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1093,17 +1094,17 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e66c61e5d0>"
+       "<matplotlib.legend.Legend at 0x16bf7be8d90>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1113,7 +1114,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1123,7 +1124,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1157,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1166,17 +1167,17 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1e66c4bde50>"
+       "<matplotlib.legend.Legend at 0x16bf52f3250>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1186,7 +1187,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1196,7 +1197,7 @@
        "<Axes: ylabel='Density'>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1232,7 +1233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusions\n",
+    "### Conclusions <a class=\"anchor\" id=\"conclusions\"></a>\n",
     "\n",
     "On a less ambitious timeline, the predictions are more reasonable. They mostly lie within a 5% margin of error. However, the model has several shortcomings. For one, it is very flat and unable to account for the massive spikes that occur with a fairly regular frequency.  Additionally, the conversion of the normalized values back into a maximum player counts uses a naive approach to estimating the mean and standard deviation for 2024. A possible solution might be using rolling means and standard deviations for conversion which incorporate forecasted values. It would be interesting to see a method of anticipating large increases in volatility.\n",
     "\n",
@@ -1241,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1251,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     },
